# libusb-demo

./: CMakeLists.txt  README.md  config.h.in  log4cxx.properties
app/: test.cpp
inc/hotplug/: common.h  hotplug.h  log.h
lib/log4cxx/: liblog4cxx.la
lib/usb/: libusb-1.0.la  libusb-1.0.so.0
src/: hotplug.cpp
